Fix spacing on home page between logo and copy

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -111,3 +111,7 @@ img {
       font-size: smaller;
     }
 }
+
+.logo {
+  margin-bottom: 2rem;
+}
